log
Sun 10 Sep 2023 01:36:43 AM UTC: 
 tests:  0|6
total_score: 0/70
1ac0a20
Sun 10 Sep 2023 01:48:51 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
085a2eb
Sun 10 Sep 2023 01:49:41 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:11: error: ‘*hashMap.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |   *hashMap->buckets = buckets;
      |    ~~~~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa1000e
Sun 10 Sep 2023 01:49:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:20: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   hashMap->buckets = buckets;
      |                    ^
cc1: all warnings being treated as errors
Compilation failed
079fb0e
Sun 10 Sep 2023 01:50:14 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
9bb3dd8
